@@ -1036,6 +1036,12 @@ StatusCode PUBLIC_API CLBlastZtrsm(const Layout layout, const Side side, const T
 
 // =================================================================================================
 
+// CLBlast stores binaries of compiled kernels into a cache in case the same kernel is used later on
+// for the same device. This cache can be cleared to free up system memory or in case of debugging.
+StatusCode PUBLIC_API CLBlastClearCompiledProgramCache();
+
+// =================================================================================================
+
 #ifdef __cplusplus
 } // extern "C"
 #endif
